version 0.6
 - Added support for the empty 'person' tag (it implicitly uses 'star' as
   its input if none is provided).
 - Oops; Kernel.respond() was DEFINITELY not thread-safe.  Now it is, provided
   you're using Python's standard 'threading' module. If not, you'll have to
   provide your own mutual-exclusion system to ensure that only one thread
   is calling Kernel.respond() at a time.
 - Recursive tags ('srai' and 'sr') no longer add their intermediate results
   to the input and output history.
 - EXPERIMENTAL FEATURE: persistent sessions.  If enabled using
   Kernel.persistentSessions(True), session data will be written to disk
   after every response.  This lets session data be preserved when the
   Kernel is destroyed, at the expense of a small performance hit (all
   that extra disk I/O).  The semantics of this feature may change in future
   releases!

version 0.5
 - The filename inside Learn tags can now contain wildcards.  Besides
   simplifying the loading of multiple files, this allows the possibility
   of loading AIML files that may not exist without crashing the
   interpreter.
 - Attempting to set the value of a predicate in a nonexistent session
   now automatically creates the session, instead of silently doing nothing.
 - "set" tags now output the new value of the variable, as well as assigning
   it.

version 0.4.1
 - Unknown AIML tags are handled in a more forgiving fashion.  If an
   unknown tag is encountered, instead of ignoring its contents entirely,
   the contents are processed and returned unaltered.
 - Added support for "bot name='name'" tags, both in patterns and in
   templates.  This also fixes a nasty infinite loop crash when a user
   says Hello to a bot. 

version 0.4
 - Added support for "star" and "sr" tags.
 - Considered adding support for the <secure> tag, but decided against it.
   see SUPPORTED_TAGS.txt for more information.

version 0.3
 - Cleaned up AIML processing code to remove some unnecessary